--- a/CSS/style.css
+++ b/CSS/style.css
@@ -510,9 +510,43 @@ footer a {
     }
     #home-section div img {
         height: 100vh !important;
+        padding-bottom: 20px !important;
     }
     .main-container h1 {
         font-size: 1.5rem;
+    }
+    #about-section {
+        height: auto;
+        padding: 20px;
+        margin: 0 auto;
+        gap: 10px;
+    }
+    #about-section h2 {
+        font-size: 1.5rem;
+        margin: 0 auto;
+    }
+    .about-container {
+        margin: 0 auto;
+        width: 100vw;
+        height: auto;
+        padding: 10px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+    .about-container img {
+        margin: 0 auto;
+        padding: auto;
+        width: 100%;
+        height: 500px;
+    }
+    .about-container div p {
+        margin: 0 auto;
+        text-align: center;
+        font-size: 1.1rem;
+        padding: 20px;
+
     }
     #picture-section {
         flex-direction: column;
@@ -554,6 +588,39 @@ footer a {
     }
     #home-section div img {
         height: 100vh !important;
+    }
+     #about-section {
+        height: auto;
+        padding: 20px;
+        margin: 0 auto;
+        gap: 10px;
+    }
+    #about-section h2 {
+        font-size: 1.5rem;
+        margin: 0 auto;
+    }
+    .about-container {
+        margin: 0 auto;
+        width: 100vw;
+        height: auto;
+        padding: 10px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+    .about-container img {
+        margin: 0 auto;
+        padding: auto;
+        width: 100%;
+        height: 500px;
+    }
+    .about-container div p {
+        margin: 0 auto;
+        text-align: center;
+        font-size: 1.1rem;
+        padding: 20px;
+
     }
     .main-container h1 {
         font-size: 1.3rem;
@@ -600,6 +667,39 @@ footer a {
     }
     #home-section div img {
         height: 100vh !important;
+    }
+     #about-section {
+        height: auto;
+        padding: 20px;
+        margin: 0 auto;
+        gap: 10px;
+    }
+    #about-section h2 {
+        font-size: 1.5rem;
+        margin: 0 auto;
+    }
+    .about-container {
+        margin: 0 auto;
+        width: 100vw;
+        height: auto;
+        padding: 10px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+    }
+    .about-container img {
+        margin: 0 auto;
+        padding: auto;
+        width: 100%;
+        height: 500px;
+    }
+    .about-container div p {
+        margin: 0 auto;
+        text-align: center;
+        font-size: 1.1rem;
+        padding: 20px;
+
     }
     .main-container h1 {
         font-size: 1.2rem;
